# barcodes-api

./: .env.example  .gitignore  Cargo.toml  docker-compose.dev.yaml
src/: config.rs  main.rs
src/barcodes/: db.rs  mod.rs  routes.rs
